config-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: config-demo
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
