data-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: data-demo
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: postgres-data
